--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ add_executable(OptionPricer
         Statistics/MCTermination.h Statistics/MCTermination.cpp
         Options&Payoffs/Parameters.h Options&Payoffs/Parameters.cpp
         Options&Payoffs/Vanilla3.h Options&Payoffs/Vanilla3.cpp
-        Options&Payoffs/DoubleDigital2.h Options&Payoffs/DoubleDigital2.cpp
+        Options&Payoffs/Digital.h Options&Payoffs/Digital.cpp
+        Options&Payoffs/PayOffDiff.h Options&Payoffs/PayOffDiff.cpp
         Statistics/ConvergenceTable.h Statistics/ConvergenceTable.cpp
         PathGeneration/Random2.h PathGeneration/Random2.cpp
         PathGeneration/Normals.h PathGeneration/Normals.cpp
